syntax = "proto3";
package uagd.ugov.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "uagd/fund/v1/fund.proto";

option go_package = "uagd/x/ugov/types";

// Msg service for ugov module.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreatePlan creates a DRAFT plan (president flow).
  rpc CreatePlan(MsgCreatePlan) returns (MsgCreatePlanResponse);

  // UpdatePlan updates a DRAFT plan fields.
  rpc UpdatePlan(MsgUpdatePlan) returns (MsgUpdatePlanResponse);

  // SubmitPlan marks a plan as SUBMITTED (typically after creating a gov proposal off-chain).
  rpc SubmitPlan(MsgSubmitPlan) returns (MsgSubmitPlanResponse);

  // ExecuteFundPosition is the governance-executed message: included inside a x/gov v1 proposal.
  rpc ExecuteFundPosition(MsgExecuteFundPosition) returns (MsgExecuteFundPositionResponse);
}

// MsgCreatePlan creates a new draft plan.
message MsgCreatePlan {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "uagd/x/ugov/MsgCreatePlan";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string fund_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string title = 3;
  string description = 4;
  uagd.fund.v1.FundPosition position = 5 [(gogoproto.nullable) = false];
}

message MsgCreatePlanResponse {
  uint64 id = 1;
}

// MsgUpdatePlan updates an existing draft plan.
message MsgUpdatePlan {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "uagd/x/ugov/MsgUpdatePlan";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
  string title = 3;
  string description = 4;
  uagd.fund.v1.FundPosition position = 5 [(gogoproto.nullable) = false];
}

message MsgUpdatePlanResponse {}

// MsgSubmitPlan marks a plan as submitted and stores the proposal id if provided.
message MsgSubmitPlan {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "uagd/x/ugov/MsgSubmitPlan";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
  uint64 proposal_id = 3;
}

message MsgSubmitPlanResponse {}

// MsgExecuteFundPosition is executed by x/gov authority (via proposal message execution).
message MsgExecuteFundPosition {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "uagd/x/ugov/MsgExecuteFundPosition";

  // authority is expected to be the x/gov module account address (or configured ugov authority).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // plan_id references a stored ugov plan.
  uint64 plan_id = 2;
}

message MsgExecuteFundPositionResponse {}
